# aegisgate

./: .dockerignore  .editorconfig  .env.example  .git_commit_msg.txt  .gitattributes  .gitignore  .golangci.yml  .gosec.conf  .gosec.json  .markdownlint.json  .pre-commit-config.yaml  .semgrep.yml  .trivy.yaml  .trivyignore  AEGISGATE_DEVELOPMENT_ANCHOR.md  AEGISGATE_MEMORY_ANCHOR.md  CHANGELOG.md  CLA.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMMIT_MSG  COMPREHENSIVE_ANALYSIS_FINAL.md  COMPREHENSIVE_ANALYSIS_V0.29.1.md  CONTRIBUTING.md  CONVERSATION_ANCHOR.md  CONVERSATION_MEMORY.md  CVE_VERSION_REPORT.md  DCO.md  Dockerfile  Dockerfile.production  Dockerfile.ultra-minimal  FINAL_STATUS_REPORT_v1.0.16.md  GO125_VALIDATION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  LICENSE_ANALYSIS.md  MIGRATION.md  MSG  Makefile  Makefile.sbom  (+197 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.41.0.md  linguist.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  dco-check.yml  docker-publish.yml  gitignore-sync.yml  ml-pipeline.yml  release.yml  sbom.yml  security.yml  test.yml  version-check.yml  version-sync.yml
.goose/: memory_anchor.md
.hooks/: pre-commit
.mlconfig/: aegisgate.example.yml  aegisgate.minimal.yml  aegisgate.production.yml
Archive/: PROXY_ANALYSIS.md  PROXY_ANALYSIS_FINAL.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.26.0.md  RELEASE_NOTES_v0.29.1.md  RFC_5424_COMPLIANCE.md  SECURITY_AUDIT.md  SECURITY_SCAN_REPORT.md  TEST_COVERAGE_REPORT.md
analysis/: AEGISGATE_ANALYSIS_REPORT.md  COMPLETE_VERIFICATION_REPORT.md  FINAL_VERIFICATION_REPORT.md
cmd/aegisgate/: main.go  main.go.backup  main_test.go
cmd/debug/: main.go
cmd/gencerts/: main.go
cmd/licensegen/: main.go
cmd/padlock/: main.go
config/: aegisgate.yml  aegisgate.yml.example  community.env  developer.env  enterprise.env  professional.env  tier.conf
configs/: siem.yaml
deploy/docker/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.multiplatform  docker-compose.dev.yml  docker-compose.ml.yml  docker-compose.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  poddisruptionbudget.yaml  rbac.yaml  service.yaml
docs/: ADMIN_UI.md  API_WRAPPERS.md  ATLAS_FRAMEWORK.md  AUDITOR_EVIDENCE_PACKAGE.md  AUTHENTICATION.md  BENCHMARKS.md  BUILD_PIPELINE_VALIDATION.md  BUILD_SUCCESS_REPORT.md  COMPLIANCE_REPORTS_GUIDE.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_PROJECT_STATUS.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONFIGURATION.md  CONFIG_QUICKSTART.md  CONVERSATION_ANCHOR_V0.29.1.md  COUNCIL_ANALYSIS.md  COUNCIL_ANALYSIS_QUICK_SUMMARY.md  COUNCIL_ANALYSIS_SUMMARY.json  COUNCIL_OF_MINE_ANALYSIS.md  COUNCIL_OF_MINE_ANALYSIS_v0.29.1.md  COUNCIL_SUMMARY_v0.29.1.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_BEGINNER.md  DEPLOYMENT_GUIDE_VISUAL.md  DEVELOPMENT_MEMORY.md  EXECUTIVE_BRIEF_PERFORMANCE_BASELINE_v0.29.1.md  EXECUTIVE_SUMMARY_INTEGRATION_PERFORMANCE_COUPLING.md  FAQ.md  FEATURE_COMPARISON_MATRIX.md  FILE_INVENTORY.md  FINAL_COMPLETION_REPORT.md  FINAL_PHASE4_READYNESS_REPORT.md  FINAL_PROJECT_STATUS_REPORT.md  FINAL_PROJECT_STATUS_v0.2.0.md  FIPS_READINESS.md  INSTALL_ONE_CLICK.md  INTEGRATION_PERFORMANCE_COUPLING_ANALYSIS_v0.29.1.md  LICENSE_EVALUATION.md  LOAD_TEST_ANALYSIS.md  MAIN_GO_VALIDATION.md  (+69 more)
docs/hash_chain/: design.md
docs/sandbox/: architecture.md
docs/signature_verification/: design.md
docs/trustdomain/: architecture.md
examples/: example_usage.go
pkg/: IntegrationGuide.md
pkg/adapters/: adapters.go  adapters_extended_test.go  adapters_test.go
pkg/agent-comm/: channel.go  (+2 more)
scripts/: build.sh  build_multiplatform.sh  build_production.bat  build_production.sh  deploy.sh  deploy_production.sh  deploy_windows.bat  generate_sbom.sh  phase4_build.bat  phase4_build_and_sbum.bat  security_validation.sh  update_main.py  update_main_cli.ps1  verify.sh  version-sync.sh  windows_deploy.bat
sdk/python/: LICENSE  README.md  pyproject.toml  pytest.ini
sdk/python/aegisgate/: MANIFEST.in  __init__.py  client.py  connection.py
sdk/python/aegisgate/langchain/: __init__.py  callback.py  filter.py
sdk/python/aegisgate/models/: __init__.py
sdk/python/aegisgate/services/: __init__.py  auth.py  compliance.py  core.py  proxy.py  siem.py  webhook.py
sdk/python/examples/: 01_basic_client.py  02_async_client.py  03_langchain_integration.py  04_services.py  __init__.py
sdk/python/tests/: __init__.py  conftest.py  test_client.py  test_connection.py  test_langchain_callback.py  test_langchain_filter.py
ui/: API.md  README.md
(+413 files in other folders)
